--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dtb = kinetics['T_10000_10000']['Rates']"
+    "ma_dtb = kinetics[\"T_10000_10000\"][\"Rates\"]"
    ]
   },
   {
