--- a/examples/RVC_O3/database/utils/compose_species.ipynb
+++ b/examples/RVC_O3/database/utils/compose_species.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(out_path+'/atom.json', 'w') as file:\n",
+    "with open(out_path+\"/atom.json\", \"w\") as file:\n",
     "  json.dump(atom, file, indent=2)"
    ]
   },
@@ -136,6 +136,7 @@
     "  \"name\": \"O2\",\n",
     "  \"m\": 31.9988e-3 / UNA,\n",
     "  \"e_f\": 0.0,\n",
+    "  \"e_d\": np.amin(levels[\"VMax\"]) * eV_to_J,\n",
     "  \"lev\": {\n",
     "    \"g\": gi.tolist(),\n",
     "    \"e\": ei.tolist()\n",
@@ -150,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(out_path+'/molecule.json', 'w') as file:\n",
+    "with open(out_path+\"/molecule.json\", \"w\") as file:\n",
     "  json.dump(molecule, file, indent=2)"
    ]
   }
