--- a/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
+++ b/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dtb = kinetics['RVS'][f'T_{int(T)}_{int(T)}'][\"Rates\"]"
+    "ma_dtb = kinetics[\"RVS\"][f\"T_{int(T)}_{int(T)}\"][\"Rates\"]"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(mol_file, 'r') as file:\n",
+    "with open(mol_file, \"r\") as file:\n",
     "  molecule = json.load(file)\n",
     "ei = np.array(molecule[\"lev\"][\"e\"])\n",
     "eij = ei.reshape(1,-1) + ei.reshape(-1,1)"
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm_dtb = kinetics['VS'][f'T_{int(T)}_{int(T)}'][\"Rates\"]"
+    "mm_dtb = kinetics[\"VS\"][f\"T_{int(T)}_{int(T)}\"][\"Rates\"]"
    ]
   },
   {
