--- a/examples/VC_O3_O4/database/utils/compose_species.ipynb
+++ b/examples/VC_O3_O4/database/utils/compose_species.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(out_path+'/atom.json', 'w') as file:\n",
+    "with open(out_path+\"/atom.json\", \"w\") as file:\n",
     "  json.dump(atom, file, indent=2)"
    ]
   },
@@ -116,23 +116,6 @@
     "# Energies\n",
     "e = (e-np.amin(e)) * eV_to_J\n",
     "evib = (evib-np.amin(evib)) * eV_to_J"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "92298a49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Energies\n",
-    "# ei = []\n",
-    "# for vi in range(np.amax(vqn)+1):\n",
-    "#   ei.append(evib[vqn == vi][0])\n",
-    "# ei = np.array(ei) - ei[0]\n",
-    "# ei *= eV_to_J\n",
-    "# # Degeneracies\n",
-    "# gi = np.full(ei.shape, 3.0)"
    ]
   },
   {
@@ -190,7 +173,7 @@
     "  \"name\": \"O2\",\n",
     "  \"m\": 31.9988e-3 / UNA,\n",
     "  \"e_f\": 0.0,\n",
-    "  \"e_d\": np.amin(levels[\"VMax\"]) * eV_to_J,\n",
+    "  \"e_d\": np.amax(ei) * eV_to_J,\n",
     "  \"lev\": {\n",
     "    \"g\": gi.tolist(),\n",
     "    \"e\": ei.tolist()\n",
@@ -205,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(out_path+'/molecule.json', 'w') as file:\n",
+    "with open(out_path+\"/molecule.json\", \"w\") as file:\n",
     "  json.dump(molecule, file, indent=2)"
    ]
   }
