--- a/examples/RVC_O3/database/utils/clustering.ipynb
+++ b/examples/RVC_O3/database/utils/clustering.ipynb
@@ -20,8 +20,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from silx.io.dictdump import h5todict, dicttoh5\n",
-    "\n",
+    "from silx.io.dictdump import h5todict\n",
     "from sklearn.cluster import SpectralClustering"
    ]
   },
@@ -33,19 +32,7 @@
    "outputs": [],
    "source": [
     "from scipy import constants\n",
-    "from scipy.constants import physical_constants as pc\n",
-    "UNA = pc[\"Avogadro constant\"][0]\n",
     "eV_to_J = constants.eV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6511bd45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cm3_to_m3 = 1e-6"
    ]
   },
   {
