--- a/examples/RVC_O3/database/utils/clustering.ipynb
+++ b/examples/RVC_O3/database/utils/clustering.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -69,13 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "bf5a7598",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_b = 6\n",
-    "nb_qb = 2"
+    "nb_b = 3\n",
+    "nb_qb = 1\n",
+    "# nb_b = 6\n",
+    "# nb_qb = 2\n",
+    "nb = nb_b + nb_qb"
    ]
   },
   {
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "id": "7253279d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "id": "b892bb96",
    "metadata": {},
    "outputs": [],
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "id": "7191f356",
    "metadata": {},
    "outputs": [],
@@ -139,12 +142,12 @@
    "id": "58a3c421",
    "metadata": {},
    "source": [
-    "> Energy-based clustering for quasi-bound states"
+    "> Energy-based clustering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "id": "cd1b684c",
    "metadata": {},
    "outputs": [],
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "id": "cf228bc5",
    "metadata": {},
    "outputs": [],
@@ -183,12 +186,12 @@
    "id": "3fd31b91",
    "metadata": {},
    "source": [
-    "> Spectral clustering for bound states"
+    "> Spectral clustering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "id": "fca0eb58",
    "metadata": {},
    "outputs": [],
@@ -210,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "id": "e933bead",
    "metadata": {},
    "outputs": [],
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "id": "4d372fc1",
    "metadata": {},
    "outputs": [],
@@ -267,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_clust_2d(nb_b+nb_qb, map_en, title=\"Energy-based clustering\")\n",
-    "plot_clust_2d(nb_b+nb_qb, map_sp, title=\"Spectral clustering\")"
+    "plot_clust_2d(nb, map_en, title=\"Energy-based clustering\")\n",
+    "plot_clust_2d(nb, map_sp, title=\"Spectral clustering\")"
    ]
   },
   {
@@ -278,8 +281,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_clust_1d(nb_b+nb_qb, map_en, title=\"Energy-based clustering\")\n",
-    "plot_clust_1d(nb_b+nb_qb, map_sp, title=\"Spectral clustering\")"
+    "plot_clust_1d(nb, map_en, title=\"Energy-based clustering\")\n",
+    "plot_clust_1d(nb, map_sp, title=\"Spectral clustering\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c186b1d5",
+   "metadata": {},
+   "source": [
+    "Save clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7b0a2d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_saving = \"./clustering/\"\n",
+    "os.makedirs(path_to_saving, exist_ok=True)\n",
+    "np.savetxt(\n",
+    "  path_to_saving + f\"/LevelsMap_ADA{nb}.csv\",\n",
+    "  np.vstack([np.arange(nb_states), map_sp]).T,\n",
+    "  fmt='%i',\n",
+    "  delimiter=',',\n",
+    "  header='Idx,Group'\n",
+    ")"
    ]
   }
  ],
