--- a/examples/RVC_O3/database/utils/clustering.ipynb
+++ b/examples/RVC_O3/database/utils/clustering.ipynb
@@ -57,19 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7fa29e71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save path\n",
-    "out_path = \"./../\"\n",
-    "os.makedirs(out_path, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "bf5a7598",
    "metadata": {},
    "outputs": [],
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "7253279d",
    "metadata": {},
    "outputs": [],
@@ -103,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "b892bb96",
    "metadata": {},
    "outputs": [],
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "7191f356",
    "metadata": {},
    "outputs": [],
@@ -147,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "cd1b684c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "cf228bc5",
    "metadata": {},
    "outputs": [],
@@ -191,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "fca0eb58",
    "metadata": {},
    "outputs": [],
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "e933bead",
    "metadata": {},
    "outputs": [],
@@ -237,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "4d372fc1",
    "metadata": {},
    "outputs": [],
@@ -295,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "7b0a2d53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_saving = \"./clustering/\"\n",
+    "path_to_saving = f\"./../testcases/ADA{nb}/\"\n",
     "os.makedirs(path_to_saving, exist_ok=True)\n",
     "np.savetxt(\n",
-    "  path_to_saving + f\"/LevelsMap_ADA{nb}.csv\",\n",
+    "  path_to_saving + \"/mapping.csv\",\n",
     "  np.vstack([np.arange(nb_states), map_sp]).T,\n",
     "  fmt='%i',\n",
     "  delimiter=',',\n",
