--- a/examples/RVC_O3/database/utils/clustering.ipynb
+++ b/examples/RVC_O3/database/utils/clustering.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
+    "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -57,15 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bf5a7598",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_b = 3\n",
-    "nb_qb = 1\n",
-    "# nb_b = 6\n",
-    "# nb_qb = 2\n",
+    "# nb_b = 3\n",
+    "# nb_qb = 1\n",
+    "nb_b = 6\n",
+    "nb_qb = 2\n",
     "nb = nb_b + nb_qb"
    ]
   },
@@ -79,14 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7253279d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kinetics = h5todict(kin_file)\n",
-    "k = kinetics[\"T_10000_10000\"][\"Rates\"]\n",
-    "k = k[\"Excit\"] + k[\"Exch_1\"]"
+    "kinetics = h5todict(kin_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5d678ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = kinetics[\"T_10000_10000\"][\"Rates\"][\"Excit\"]\n",
+    "k = np.tril(k, k=-1)"
    ]
   },
   {
@@ -126,6 +136,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b8f9eb0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_probmat(\n",
+    "  mapping\n",
+    "):\n",
+    "  mapping = (mapping - np.amin(mapping)).astype(int)\n",
+    "  nb_levs, nb_bins = len(mapping), np.amax(mapping)+1\n",
+    "  data = np.ones(nb_levs)\n",
+    "  indices = (np.arange(nb_levs), mapping)\n",
+    "  shape = (nb_levs, nb_bins)\n",
+    "  return sp.sparse.coo_matrix((data, indices), shape).toarray()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "58a3c421",
    "metadata": {},
@@ -135,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cd1b684c",
    "metadata": {},
    "outputs": [],
@@ -159,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cf228bc5",
    "metadata": {},
    "outputs": [],
@@ -179,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fca0eb58",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_s(e, k, fk=1.0, fe=1.0):\n",
     "  de = np.abs(e.reshape(-1,1) - e.reshape(1,-1))\n",
-    "  kmin = k[k>0].min() * 1e-2\n",
+    "  kmin = k[k>0].min() * 1e-5\n",
     "  kk = k + k.T + kmin\n",
     "  s = de**fe / kk**fk\n",
     "  return np.exp(-s)\n",
@@ -201,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e933bead",
    "metadata": {},
    "outputs": [],
@@ -225,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4d372fc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_clust_2d(nb, map, title):\n",
+    "def plot_clust_2d(map, title):\n",
     "  plt.figure()\n",
-    "  for c in range(nb):\n",
+    "  for c in range(map.max()):\n",
     "    i = (map == c+1)\n",
     "    plt.scatter(e_v[i], e_r[i], s=2)\n",
     "  plt.xlabel('$\\epsilon_v$ [eV]')\n",
@@ -240,9 +268,9 @@
     "  plt.title(title)\n",
     "  plt.show()\n",
     "\n",
-    "def plot_clust_1d(nb, map, title):\n",
+    "def plot_clust_1d(map, title):\n",
     "  plt.figure()\n",
-    "  for c in range(nb):\n",
+    "  for c in range(map.max()):\n",
     "    i = (map == c+1)\n",
     "    plt.scatter(e[i]/eV_to_J, np.ones_like(e[i])*(c+1), s=2)\n",
     "  plt.xlabel('$\\epsilon_i$ [eV]')\n",
@@ -258,8 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_clust_2d(nb, map_en, title=\"Energy-based clustering\")\n",
-    "plot_clust_2d(nb, map_sp, title=\"Spectral clustering\")"
+    "plot_clust_2d(map_en, title=\"Energy-based clustering\")\n",
+    "plot_clust_2d(map_sp, title=\"Spectral clustering\")"
    ]
   },
   {
@@ -269,8 +297,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_clust_1d(nb, map_en, title=\"Energy-based clustering\")\n",
-    "plot_clust_1d(nb, map_sp, title=\"Spectral clustering\")"
+    "plot_clust_1d(map_en, title=\"Energy-based clustering\")\n",
+    "plot_clust_1d(map_sp, title=\"Spectral clustering\")"
    ]
   },
   {
@@ -283,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7b0a2d53",
    "metadata": {},
    "outputs": [],
