--- a/examples/RVC_O3/database/utils/clustering.ipynb
+++ b/examples/RVC_O3/database/utils/clustering.ipynb
@@ -63,10 +63,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nb_b = 3\n",
-    "# nb_qb = 1\n",
-    "nb_b = 6\n",
-    "nb_qb = 2\n",
+    "nb_b = 3\n",
+    "nb_qb = 1\n",
+    "# nb_b = 6\n",
+    "# nb_qb = 2\n",
     "nb = nb_b + nb_qb"
    ]
   },
@@ -312,6 +312,24 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "5197d350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_saving = f\"./../testcases/RVE{nb}/\"\n",
+    "os.makedirs(path_to_saving, exist_ok=True)\n",
+    "np.savetxt(\n",
+    "  path_to_saving + \"/mapping.csv\",\n",
+    "  np.vstack([np.arange(nb_states), map_en]).T,\n",
+    "  fmt='%i',\n",
+    "  delimiter=',',\n",
+    "  header='Idx,Group'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "7b0a2d53",
    "metadata": {},
    "outputs": [],
