--- a/examples/RVC_O3/database/utils/read_plato_sol.ipynb
+++ b/examples/RVC_O3/database/utils/read_plato_sol.ipynb
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_bins = 4\n",
-    "clustering = \"ADA\"\n",
+    "nb_bins = 8\n",
+    "clustering = \"RVE\"\n",
     "testcase = \"cold\"\n",
     "prefix = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/CG/run/O3_UMN/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_saving = f\"./../testcases/{clustering}{nb_bins}/\"\n",
+    "path_to_saving = f\"./../rom_cg/{clustering}{nb_bins}/\"\n",
     "os.makedirs(path_to_saving, exist_ok=True)\n",
     "df = pd.DataFrame(data=np.loadtxt(path_to_sol, comments=\"#\"), index=None, columns=columns)\n",
     "df.to_csv(path_to_saving+f\"/{testcase}.csv\", index=None, float_format='%.12e')"
