--- a/examples/RVC_O3/database/utils/compose_species.ipynb
+++ b/examples/RVC_O3/database/utils/compose_species.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a1ba1c77",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f3bb5b5d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3a315729",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "769edad8",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8eacb16a",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "92298a49",
    "metadata": {},
    "outputs": [],
@@ -122,12 +122,17 @@
     "# Energies\n",
     "ei = (levels[\"E\"] - np.amin(levels[\"E\"])) * eV_to_J\n",
     "# Degeneracies\n",
-    "gi = levels[\"g\"]"
+    "gi = levels[\"g\"]\n",
+    "# Dissociation energy\n",
+    "ev = levels[\"EVib\"].values\n",
+    "ev -= ev.min()\n",
+    "iv = np.where(levels[\"jqn\"] == 0)[0]\n",
+    "ed = np.amax(ev[iv])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "206214d1",
    "metadata": {},
    "outputs": [],
@@ -136,7 +141,7 @@
     "  \"name\": \"O2\",\n",
     "  \"m\": 31.9988e-3 / UNA,\n",
     "  \"e_f\": 0.0,\n",
-    "  \"e_d\": 5.113 * eV_to_J,\n",
+    "  \"e_d\": ed * eV_to_J,\n",
     "  \"lev\": {\n",
     "    \"g\": gi.tolist(),\n",
     "    \"e\": ei.tolist()\n",
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9a40206a",
    "metadata": {},
    "outputs": [],
@@ -158,7 +163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sciml",
    "language": "python",
    "name": "python3"
   },
