--- a/examples/RVC_O3/database/rom_cg/read_plato_sol.ipynb
+++ b/examples/RVC_O3/database/rom_cg/read_plato_sol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "nb_bins = 8\n",
-    "clustering = \"RVE\"\n",
-    "testcase = \"cold\"\n",
+    "clustering = \"MAPEQ\"\n",
+    "testcase = \"hot\"\n",
     "prefix = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/CG/run/O3_UMN/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_saving = f\"./../rom_cg/{clustering}{nb_bins}/\"\n",
+    "path_to_saving = f\"./{clustering}{nb_bins}/\"\n",
     "os.makedirs(path_to_saving, exist_ok=True)\n",
     "df = pd.DataFrame(data=np.loadtxt(path_to_sol, comments=\"#\"), index=None, columns=columns)\n",
     "df.to_csv(path_to_saving+f\"/{testcase}.csv\", index=None, float_format='%.12e')"
