--- a/examples/RVC_O3/database/rom_mt/compute_tau.ipynb
+++ b/examples/RVC_O3/database/rom_mt/compute_tau.ipynb
@@ -151,7 +151,7 @@
     "e_tau = 0.6321 * e_vib[-1]\n",
     "index = np.argmin(np.absolute(e_vib-e_tau))\n",
     "tau_p = float(t[index])*p0/constants.atm\n",
-    "print(f\"The characteristic internal energy relaxation time is: {tau_p} atm*s\")"
+    "text = f\"- The characteristic internal energy relaxation time is: {tau_p} atm*s\""
    ]
   },
   {
@@ -161,10 +161,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 10\n",
+    "a = 40.0\n",
     "c = 18.42\n",
     "b = -1/a*(np.log(tau_p)+c) + a*np.power(T, -1/3)\n",
-    "text = f\"The MW coefficients are [a, b, c]: {a}, {b}, {c}\"\n",
+    "text += f\"\\n- The MW coefficients are [a, b, c]: {a}, {b}, {c}\"\n",
     "with open(\"./tau.txt\", \"w\") as file:\n",
     "  file.write(text)\n",
     "print(text)"
