--- a/examples/RVC_O3/database/rom_mt/utils/read_plato_sol.ipynb
+++ b/examples/RVC_O3/database/rom_mt/utils/read_plato_sol.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(data=np.loadtxt(sol_file, comments=\"#\"), index=None, columns=columns)\n",
-    "df.to_csv(f\"./{testcase}.csv\", index=None, float_format='%.12e')"
+    "df.to_csv(f\"./../testcases/{testcase}.csv\", index=None, float_format='%.12e')"
    ]
   }
  ],
