--- a/examples/RVC_O3/database/rom_mt/utils/compute_tau.ipynb
+++ b/examples/RVC_O3/database/rom_mt/utils/compute_tau.ipynb
@@ -5,14 +5,15 @@
    "id": "following-sister",
    "metadata": {},
    "source": [
-    "#### Characteristic internal energy relaxation time"
+    "#### Characteristic vibrational energy relaxation time"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "dc002ff1",
    "metadata": {},
    "source": [
-    "The characteristic internal energy relaxation time is defined as the time required by the internal energy mode to reach the 63.21% of its equilibrium value\n",
+    "The characteristic vibrational energy relaxation time is defined as the time required by the vibrational energy mode to reach the 63.21% of its equilibrium value\n",
     "\\begin{equation}\n",
     "    \\tau=t\\hspace{3mm}\\text{s.t.}\\hspace{3mm}\\epsilon_{int}\\left(t\\right) = 0.6321\\epsilon^*_{int}\n",
     "\\end{equation}\n",
@@ -20,24 +21,59 @@
     "\\begin{equation}\n",
     "    \\tau=\\frac{1}{p}\\exp\\left[a\\left(T^{-1/3}-b\\right)-c\\right]\n",
     "\\end{equation}\n",
-    "with $c=18.42$. If $a=1$, so\n",
-    "\\begin{equation}\n",
-    "    b=\\frac{1}{a}\\left[-\\log(\\tau p)+aT^{-1/3}-c\\right]\n",
-    "\\end{equation}"
+    "with $c=18.42$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c70b29c0",
+   "id": "23dfe0bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import dill as pickle\n",
+    "path_to_ronek = \"/home/zanardi/Codes/ML/RONEK/ronek/\"\n",
     "\n",
-    "from scipy import constants"
+    "import sys\n",
+    "import importlib\n",
+    "if (importlib.util.find_spec(\"ronek\") is None):\n",
+    "  sys.path.append(path_to_ronek)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a3f1891e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_cfg = {\n",
+    "  \"backend\": \"torch\",\n",
+    "  \"device\": \"cuda\",\n",
+    "  \"device_idx\": 1,\n",
+    "  \"nb_threads\": 8,\n",
+    "  \"epsilon\": 1e-10,\n",
+    "  \"floatx\": \"float64\"\n",
+    "}\n",
+    "\n",
+    "from ronek import env\n",
+    "env.set(**env_cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fcef4582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import pandas as pd\n",
+    "\n",
+    "from scipy import constants\n",
+    "from ronek import backend as bkd\n",
+    "from ronek import systems as sys_mod"
    ]
   },
   {
@@ -45,33 +81,49 @@
    "id": "mighty-russia",
    "metadata": {},
    "source": [
-    "Define paths"
+    "Inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "dimensional-mounting",
    "metadata": {},
    "outputs": [],
    "source": [
     "T = 1e4\n",
     "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\"\n",
-    "sol_file = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/data/case_cold.p\""
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/database/\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3a7bf783",
+   "id": "419cca48",
    "metadata": {},
    "source": [
-    "Levels"
+    "Initialize thermochemical system"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "dc33d1c4",
+   "execution_count": 5,
+   "id": "56de8211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system = sys_mod.TASystem(\n",
+    "  T=T,\n",
+    "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
+    "  species={\n",
+    "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
+    "  }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4acd257b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,24 +135,119 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-sister",
+   "id": "2287d29c",
    "metadata": {},
    "source": [
-    "Solution"
+    "> Remove dissociation processes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "native-therapist",
+   "execution_count": 7,
+   "id": "5513e2f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol = pickle.load(open(sol_file, \"rb\"))\n",
-    "t = sol[\"t\"]\n",
-    "p0 = sol[\"mu\"][-1]\n",
-    "ni = sol[\"n\"][1]\n",
-    "fi = ni / np.sum(ni, axis=0)"
+    "for k in (\"fwd\", \"bwd\"):\n",
+    "  system.kin.rates[\"m-a\"][\"d\"][k][::] = 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a3a955f",
+   "metadata": {},
+   "source": [
+    "> Compute eigendecomposition of the excitation processes matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "23282e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = system._update_fom_ops(system.kin.rates)[\"ed\"]\n",
+    "l, v = sp.linalg.eig(k)\n",
+    "vinv = sp.linalg.inv(v)\n",
+    "l, v, vinv = [bkd.to_torch(x) for x in (l, v, vinv)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "590b14fe",
+   "metadata": {},
+   "source": [
+    "Solve the system for different pressure values\n",
+    "> Time grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a334e13e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = system.get_tgrid(1e-12, 1e-3, num=200)\n",
+    "t = bkd.to_torch(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c664dd",
+   "metadata": {},
+   "source": [
+    "> Initial conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "67661957",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p0 = np.geomspace(1e3,1e4,10)\n",
+    "T0 = 500.0\n",
+    "x0_a = 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d6eb332",
+   "metadata": {},
+   "source": [
+    "> Solve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "18fbd1df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve(p0):\n",
+    "  n0 = system.mix.get_init_sol(T0, x0_a, p0, mu_type=\"mole\")\n",
+    "  n0 = bkd.to_torch(n0)\n",
+    "  n = []\n",
+    "  for ti in t:\n",
+    "    li = torch.exp(ti*l*n0[0])\n",
+    "    ni = v @ (li * (vinv @ n0[1:]))\n",
+    "    n.append(bkd.to_numpy(ni))\n",
+    "  n = np.vstack(n).T\n",
+    "  return n / np.sum(n, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "be68db21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = [solve(p0_i) for p0_i in p0]"
    ]
   },
   {
@@ -108,63 +255,87 @@
    "id": "romance-accordance",
    "metadata": {},
    "source": [
-    "Vibrational energy evolution"
+    "Compute vibrational energy relaxation time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "expressed-music",
+   "execution_count": 13,
+   "id": "5a58b90c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "i_vib = (levels[\"jqn\"] == 0)\n",
-    "e_vib = np.sum(fi[i_vib].T * ei[i_vib], axis=1)"
+    "i_vib = (levels[\"jqn\"] == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "30bf3383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_tau(p0, fi, ei):\n",
+    "  e_vib = np.sum(fi[i_vib].T * ei[i_vib], axis=1)\n",
+    "  e_tau = 0.6321 * e_vib[-1]\n",
+    "  index = np.argmin(np.absolute(e_vib-e_tau))\n",
+    "  tau_p = float(t[index])*p0/constants.atm\n",
+    "  return tau_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0290156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau_p = np.array([compute_tau(p0[i], f[i], ei) for i in range(len(p0))])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "frequent-trademark",
+   "id": "c884c95d",
    "metadata": {},
    "source": [
-    "The characteristic internal energy relaxation time is defined as the time required by the internal energy mode to reach the 63.21% of its equilibrium value\n",
-    "\\begin{equation}\n",
-    "    \\tau=t\\hspace{3mm}\\text{s.t.}\\hspace{3mm}\\epsilon_{int}\\left(t\\right) = 0.6321\\epsilon^*_{int}\n",
-    "\\end{equation}\n",
-    "The MW formulation is\n",
-    "\\begin{equation}\n",
-    "    \\tau=\\frac{1}{p}\\exp\\left[a\\left(T^{-1/3}-b\\right)-c\\right]\n",
-    "\\end{equation}\n",
-    "with $c=18.42$. If $a=1$, so\n",
-    "\\begin{equation}\n",
-    "    b=\\frac{1}{a}\\left[-\\log(\\tau p)+aT^{-1/3}-c\\right]\n",
-    "\\end{equation}"
+    "Compute coefficients for the Millikan-White formula"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "stuck-tracy",
+   "execution_count": 16,
+   "id": "d5af5ff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "e_tau = 0.6321 * e_vib[-1]\n",
-    "index = np.argmin(np.absolute(e_vib-e_tau))\n",
-    "tau_p = float(t[index])*p0/constants.atm\n",
-    "text = f\"- The characteristic internal energy relaxation time is: {tau_p} atm*s\""
+    "def loss_mw_formula(x, tau_p, c):\n",
+    "  a, b = x\n",
+    "  lhs = np.log(tau_p)\n",
+    "  rhs = a*(np.power(T, -1/3)-b) - c\n",
+    "  res = lhs - rhs\n",
+    "  return np.sum(res**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3744434c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = 18.42\n",
+    "x0 = np.array([40.0, 1.0])\n",
+    "a, b = sp.optimize.minimize(loss_mw_formula, x0, args=(tau_p, c), method=\"CG\").x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-underwear",
+   "id": "2f48731e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 40.0\n",
-    "c = 18.42\n",
-    "b = -1/a*(np.log(tau_p)+c) + a*np.power(T, -1/3)\n",
-    "text += f\"\\n- The MW coefficients are [a, b, c]: {a}, {b}, {c}\"\n",
+    "text = f\"- The MW coefficients are [a, b, c]: {a}, {b}, {c}\"\n",
     "with open(\"./tau.txt\", \"w\") as file:\n",
     "  file.write(text)\n",
     "print(text)"
