--- a/examples/RVC_O3/database/utils/compose_species.ipynb
+++ b/examples/RVC_O3/database/utils/compose_species.ipynb
@@ -142,6 +142,7 @@
     "  \"m\": 31.9988e-3 / UNA,\n",
     "  \"e_f\": 0.0,\n",
     "  \"e_d\": ed * eV_to_J,\n",
+    "  \"theta_v\": 2273.6,\n",
     "  \"lev\": {\n",
     "    \"g\": gi.tolist(),\n",
     "    \"e\": ei.tolist()\n",
