--- a/examples/RVC_O3/database/utils/compose_species.ipynb
+++ b/examples/RVC_O3/database/utils/compose_species.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\""
+    "lev_file = \"./../O2.csv\""
    ]
   },
   {
