--- a/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
+++ b/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
@@ -62,7 +62,7 @@
     "  \"VS\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O4_UMN_VSM.hdf5\"\n",
     "}\n",
     "mol_file = \"./../species/molecule.json\"\n",
-    "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\""
+    "lev_file = \"./../../../RVC_O3/database/O2.csv\""
    ]
   },
   {
