--- a/examples/VC_O3_O4/database/utils/compose_species.ipynb
+++ b/examples/VC_O3_O4/database/utils/compose_species.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "T = 1e4\n",
-    "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\""
+    "lev_file = \"./../../../RVC_O3/database/O2.csv\""
    ]
   },
   {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dd7eeb1c",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6096c90c",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "206214d1",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9a40206a",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sciml",
    "language": "python",
    "name": "python3"
   },
