--- a/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
@@ -132,19 +132,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_linfom_err(path, index):\n",
+    "def compute_linfom_err(path, index, eval_err=True):\n",
     "  # Load data\n",
     "  data = utils.load_case(path=path, index=index)\n",
     "  n0, t, n = [data[k] for k in (\"n0\", \"t\", \"n\")]\n",
     "  rho = data[\"mu\"][-1]\n",
     "  # Solve linear system\n",
     "  nl = system.solve_lin_fom(t, n0)\n",
-    "  # Convert to mass fractions\n",
-    "  w = system.mix.get_w(np.vstack(n), rho)\n",
-    "  wl = system.mix.get_w(np.vstack(nl), rho)\n",
-    "  # Compute error\n",
-    "  err = utils.l2_relative_error(w, wl, axis=0)\n",
-    "  return t, err"
+    "  if eval_err:\n",
+    "    # Convert to mass fractions\n",
+    "    w = system.mix.get_w(np.vstack(n), rho)\n",
+    "    wl = system.mix.get_w(np.vstack(nl), rho)\n",
+    "    # Compute error\n",
+    "    err = utils.l2_relative_error(w, wl, axis=0)\n",
+    "    return index, t, err\n",
+    "  else:\n",
+    "    return index, t, n, nl"
    ]
   },
   {
@@ -164,7 +167,7 @@
     "    file=sys.stdout\n",
     "  )\n",
     ")\n",
-    "t, err = list(zip(*err))\n",
+    "indices, t, err = list(zip(*err))\n",
     "err = np.vstack(err)"
    ]
   },
@@ -198,6 +201,48 @@
     "  figname=\"./rel_err_lin_fom.pdf\",\n",
     "  save=True,\n",
     "  show=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18666af3",
+   "metadata": {},
+   "source": [
+    "Plot moments of the worst test case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "72a731ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = np.argmax(np.mean(err, axis=1))\n",
+    "_, t, n, nl = compute_linfom_err(\n",
+    "  path=path_to_data, index=indices[j], eval_err=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "115fc81f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp.plot_mom_evolution(\n",
+    "  path=\"./\",\n",
+    "  t=t,\n",
+    "  n_m={\"FOM\": n[1], \"Linearized FOM\": nl[1]},\n",
+    "  molecule=system.mix.species[\"molecule\"],\n",
+    "  molecule_label=\"\\\\text{O$_2$}\",\n",
+    "  tlim={\"m0\": [1e-8, 1e-4], \"m1\": [1e-9, 1e-4]},\n",
+    "  ylim_err=[1e-9,1e3],\n",
+    "  err_scale=\"log\",\n",
+    "  hline=1e2,\n",
+    "  max_mom=2\n",
     ")"
    ]
   }
