--- a/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
@@ -5,7 +5,7 @@
    "id": "11e7d091",
    "metadata": {},
    "source": [
-    "## Accuracy Linear FOM\n",
+    "## Accuracy Linearized FOM\n",
     "\n",
     "Environment"
    ]
@@ -44,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "import joblib as jl\n",
@@ -87,8 +88,19 @@
     "T = 1e4\n",
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_O3/database/\"\n",
     "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/data/\"\n",
-    "nb_samples = 1000\n",
+    "path_to_saving = \"./lin_fom/\"\n",
+    "nb_samples = 2\n",
     "nb_workers = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fec84777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(path_to_saving, exist_ok=True)"
    ]
   },
   {
@@ -101,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f06bacee",
    "metadata": {},
    "outputs": [],
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "43dd89be",
    "metadata": {},
    "outputs": [],
@@ -168,7 +180,8 @@
     "  )\n",
     ")\n",
     "indices, t, err = list(zip(*err))\n",
-    "err = np.vstack(err)"
+    "err = np.vstack(err)\n",
+    "err_mean = np.mean(err, axis=0)"
    ]
   },
   {
@@ -188,7 +201,7 @@
    "source": [
     "pp.plot_err_ci_evolution(\n",
     "  x=t[0],\n",
-    "  mean=np.mean(err, axis=0),\n",
+    "  mean=err_mean,\n",
     "  sem=sp.stats.sem(err, axis=0),\n",
     "  size=len(err),\n",
     "  alpha=0.95,\n",
@@ -198,7 +211,7 @@
     "  labels=[r\"$t$ [s]\", r\"Relative $L^2$ Error\"],\n",
     "  scales=[\"log\", \"linear\"],\n",
     "  legend_loc=\"best\",\n",
-    "  figname=\"./rel_err_lin_fom.pdf\",\n",
+    "  figname=path_to_saving+\"/rel_err.pdf\",\n",
     "  save=True,\n",
     "  show=False\n",
     ")"
@@ -209,7 +222,18 @@
    "id": "05c3614f",
    "metadata": {},
    "source": [
-    "Plot moments of the worst test case"
+    "Plot moments of the average test trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "217adba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = np.argmin(np.linalg.norm(err - err_mean, axis=-1))\n",
+    "np.savetxt(path_to_saving + \"/traj_index.txt\", i.reshape(1), fmt=\"%i\")"
    ]
   },
   {
@@ -219,9 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = np.argmax(np.mean(err, axis=1))\n",
     "_, t, n, nl = compute_linfom_err(\n",
-    "  path=path_to_data, index=indices[j], eval_err=False\n",
+    "  path=path_to_data, index=indices[i], eval_err=False\n",
     ")"
    ]
   },
@@ -233,7 +256,7 @@
    "outputs": [],
    "source": [
     "pp.plot_mom_evolution(\n",
-    "  path=\"./\",\n",
+    "  path=path_to_saving,\n",
     "  t=t,\n",
     "  n_m={\"FOM\": n[1], \"Linearized FOM\": nl[1]},\n",
     "  molecule=system.mix.species[\"molecule\"],\n",
