--- a/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
@@ -44,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "import joblib as jl\n",
@@ -87,8 +88,19 @@
     "T = 1e4\n",
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/VC_O3_O4/database/\"\n",
     "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/data/\"\n",
+    "path_to_saving = \"./lin_fom/\"\n",
     "nb_samples = 1000\n",
     "nb_workers = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d47898c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(path_to_saving, exist_ok=True)"
    ]
   },
   {
@@ -101,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f06bacee",
    "metadata": {},
    "outputs": [],
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a288c79f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +180,8 @@
     "  )\n",
     ")\n",
     "indices, t, err = list(zip(*err))\n",
-    "err = np.vstack(err)"
+    "err = np.vstack(err)\n",
+    "err_mean = np.mean(err, axis=0)"
    ]
   },
   {
@@ -181,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6bddca54",
    "metadata": {},
    "outputs": [],
    "source": [
     "pp.plot_err_ci_evolution(\n",
     "  x=t[0],\n",
-    "  mean=np.mean(err, axis=0),\n",
+    "  mean=err_mean,\n",
     "  sem=sp.stats.sem(err, axis=0),\n",
     "  size=len(err),\n",
     "  alpha=0.95,\n",
@@ -198,7 +211,7 @@
     "  labels=[r\"$t$ [s]\", r\"Relative $L^2$ Error\"],\n",
     "  scales=[\"log\", \"linear\"],\n",
     "  legend_loc=\"best\",\n",
-    "  figname=\"./rel_err_lin_fom.pdf\",\n",
+    "  figname=path_to_saving+\"/rel_err.pdf\",\n",
     "  save=True,\n",
     "  show=False\n",
     ")"
@@ -209,7 +222,18 @@
    "id": "18666af3",
    "metadata": {},
    "source": [
-    "Plot moments of the worst test case"
+    "Plot moments of the average test trajectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f44caace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = np.argmin(np.linalg.norm(err - err_mean, axis=-1))\n",
+    "np.savetxt(path_to_saving + \"/traj_index.txt\", i.reshape(1), fmt=\"%i\")"
    ]
   },
   {
@@ -219,21 +243,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = np.argmax(np.mean(err, axis=1))\n",
     "_, t, n, nl = compute_linfom_err(\n",
-    "  path=path_to_data, index=indices[j], eval_err=False\n",
+    "  path=path_to_data, index=indices[i], eval_err=False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "115fc81f",
    "metadata": {},
    "outputs": [],
    "source": [
     "pp.plot_mom_evolution(\n",
-    "  path=\"./\",\n",
+    "  path=path_to_saving,\n",
     "  t=t,\n",
     "  n_m={\"FOM\": n[1], \"Linearized FOM\": nl[1]},\n",
     "  molecule=system.mix.species[\"molecule\"],\n",
@@ -241,7 +264,7 @@
     "  tlim={\"m0\": [1e-8, 1e-4], \"m1\": [1e-9, 1e-4]},\n",
     "  ylim_err=[1e-9,1e3],\n",
     "  err_scale=\"log\",\n",
-    "  hline=1e2,\n",
+    "  hline=1e1,\n",
     "  max_mom=2\n",
     ")"
    ]
