--- a/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
@@ -185,6 +185,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf91e5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(path_to_saving + \"/error.txt\", err)\n",
+    "np.savetxt(path_to_saving + \"/time.txt\", t.reshape(-1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "620e046a",
    "metadata": {},
