--- a/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
@@ -164,35 +164,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "65f7633b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "err = jl.Parallel(nb_workers)(\n",
-    "  jl.delayed(compute_linfom_err)(\n",
-    "    path=path_to_data,\n",
-    "    index=i\n",
-    "  ) for i in tqdm(\n",
-    "    iterable=range(nb_samples),\n",
-    "    ncols=80,\n",
-    "    file=sys.stdout\n",
+    "os.makedirs(path_to_saving + \"/data/\", exist_ok=True)\n",
+    "if os.path.isfile(path_to_saving + \"/data/error.txt\"):\n",
+    "  indices = np.loadtxt(path_to_saving + \"/data/indices.txt\").astype(int)\n",
+    "  t = np.loadtxt(path_to_saving + \"/data/time.txt\")\n",
+    "  err = np.loadtxt(path_to_saving + \"/data/error.txt\")\n",
+    "else:\n",
+    "  err = jl.Parallel(nb_workers)(\n",
+    "    jl.delayed(compute_linfom_err)(\n",
+    "      path=path_to_data,\n",
+    "      index=i\n",
+    "    ) for i in tqdm(\n",
+    "      iterable=range(nb_samples),\n",
+    "      ncols=80,\n",
+    "      file=sys.stdout\n",
+    "    )\n",
     "  )\n",
-    ")\n",
-    "indices, t, err = list(zip(*err))\n",
-    "err = np.vstack(err)\n",
+    "  indices, t, err = list(zip(*err))\n",
+    "  for (name, data) in (\n",
+    "    (\"indices\", np.array(indices).reshape(-1)),\n",
+    "    (\"time\", t[0].reshape(-1)),\n",
+    "    (\"error\", np.vstack(err))\n",
+    "  ):\n",
+    "    np.savetxt(path_to_saving + f\"/data/{name}.txt\", data)\n",
     "err_mean = np.mean(err, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf91e5d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt(path_to_saving + \"/error.txt\", err)\n",
-    "np.savetxt(path_to_saving + \"/time.txt\", t.reshape(-1))"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "pp.plot_err_ci_evolution(\n",
-    "  x=t[0],\n",
+    "  x=t,\n",
     "  mean=err_mean,\n",
     "  sem=sp.stats.sem(err, axis=0),\n",
     "  size=len(err),\n",
