--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -84,22 +84,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5c9df3b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ma_dtb = kinetics[\"T_10000_10000\"][\"Rates\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "a2d1367f",
    "metadata": {},
    "outputs": [],
    "source": [
     "kin_dtb[\"m-a\"] = {}\n",
-    "for (k, rates) in ma_dtb.items():\n",
+    "for (k, rates) in kinetics[\"Arrhenius\"].items():\n",
     "  if (k == \"Diss_Corr\"):\n",
     "    p = \"d\"\n",
     "    shape = (nb_states,1,1,1,1)\n",
@@ -108,26 +98,15 @@
     "    shape = (nb_states,1,nb_states,1)\n",
     "    # Remove endothermic processes\n",
     "    triu_i = np.triu_indices(nb_states)\n",
-    "    rates[triu_i[0],triu_i[1]] = 0.0\n",
+    "    for k in rates.keys():\n",
+    "      rates[k][triu_i[0],triu_i[1]] = 0.0\n",
     "  else:\n",
     "    continue\n",
     "  # Reshape and rescale\n",
-    "  rates = rates.reshape(shape) * cm3_to_m3\n",
+    "  rates = {k: coeff.reshape(shape) for (k, coeff) in rates.items()}\n",
+    "  rates[\"A\"] *= cm3_to_m3\n",
     "  # Store\n",
     "  kin_dtb[\"m-a\"][p] = rates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3ad37684",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set Arrhenius parameters\n",
-    "for (p, rates) in kin_dtb[\"m-a\"].items():\n",
-    "  zeros = np.zeros_like(rates)\n",
-    "  kin_dtb[\"m-a\"][p] = {\"A\": rates, \"beta\": zeros, \"Ta\": zeros}"
    ]
   },
   {
@@ -140,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c657093f",
    "metadata": {},
    "outputs": [],
